# rsmorphy

./: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  build.rs
dict/ru/: Cargo.toml  build.rs
dict/ru/src/: lib.rs
dict/uk/: Cargo.toml
dict/uk/src/: lib.rs
examples/: enc-dec.rs  inflect.rs  lexeme.rs  parse.rs
examples/util/: mod.rs
src/: estimator.rs  lib.rs  macros.rs  prelude.rs  shapes.rs  util.rs
src/analyzer/: mod.rs  morph.rs
src/analyzer/units/: abc.rs  mod.rs  unknown.rs
src/analyzer/units/abbr/: initials.rs  mod.rs
src/analyzer/units/by_analogy/: kp.rs  ks.rs  mod.rs  up.rs
src/analyzer/units/by_hyphen/: ha.rs  hsp.rs  hword.rs  mod.rs
src/analyzer/units/by_lookup/: dict.rs  mod.rs
src/analyzer/units/by_shape/: latin.rs  mod.rs  number.rs  punct.rs  roman.rs
src/container/: abc.rs  affix.rs  decode_.rs  dict.rs  ha.rs  hyphen.rs  initials.rs  lex.rs  mod.rs  paradigm.rs  parsed.rs  score.rs  seen.rs  shape.rs  unknown.rs  word.rs
src/container/decode/: error.rs  follow.rs  map.rs  mod.rs  predicate.rs  take.rs
src/container/stack/: affix.rs  hsp.rs  hword.rs  mod.rs  source.rs
src/dawg/: completer.rs  dawg.rs  dictionary.rs  guide.rs  mod.rs  units.rs  value.rs
src/opencorpora/: dictionary.rs  mod.rs  paradigm.rs
src/opencorpora/dictionary/: dictionary.rs  dictionary_meta.rs  grammeme_meta.rs  loader.rs  mod.rs  paradigm.rs
src/opencorpora/grammeme/: grammeme.rs  mod.rs  reg.rs  set.rs
src/opencorpora/kind/: animacy.rs  aspect.rs  case.rs  gender.rs  involvement.rs  mod.rs  mood.rs  number.rs  person.rs  pos.rs  tense.rs  transitivity.rs  voice.rs
src/opencorpora/tag/: mod.rs  reg.rs  tag.rs
