[package]
name = "rsmorphy"
version = "0.4.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Morphological analyzer / inflection engine for Russian and Ukrainian (soon) languages (WIP)"
keywords = ["nlp", "inflection", "pluralize", "russian", "ukrainian"]
categories = ["text-processing", "value-formatting"]
readme = "README.md"
homepage = "https://github.com/irbis-labs/rsmorphy"
repository = "https://github.com/irbis-labs/rsmorphy"
documentation = "https://docs.rs/rsmorphy/"
publish = false

[badges]
travis-ci = { repository = "irbis-labs/rsmorphy" }


[features]
default         = ["fast_debug"]
# TODO Remove when cargo can build dependencies in release mode.
# Workaround for the significant slowdown with loading dictionaries in tests.
fast_debug      = ["flate2/miniz-sys"]
safe_native     = ["flate2/rust_backend"]
profile         = []


[dependencies]
base64              = "0.9"
boolinator          = "2.4.0"
byteorder           = "1.0"
env_logger          = "*"
flate2              = { version = "1.0", default-features = false }
lazy_static         = "1.0"
log                 = "0.4"
maplit              = "1.0"
num                 = "0.2"
regex               = "1.0"
roman               = "0.1"
serde               = "1.0"
serde_derive        = "1.0"
serde_json          = "1.0"
string_cache        = "0.7"
unicode_categories  = "0.1"

rsmorphy-dict-ru    = { version = "0.1", path = "./dict/ru" }
